--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-google-places-autocomplete": "^2.2.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-maps": "0.27.1",
+    "react-native-vector-icons": "^8.1.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
