--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
+        playServicesVersion = "17.0.0"
         ndkVersion = "20.1.5948944"
+        androidMapsUtilsVersion = "2.2.0"
     }
     repositories {
         google()
@@ -16,6 +18,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:4.1.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
